[package]
name = "era-server"
version = "2.0.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-beta.15"
chrono = "0.4"
env_logger = "0.9.0"
log = "0.4"
regex = "1.5"
reqwest = { version = "0.11", features = ["json", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_arrays = "0.1.0"
sha-1 = "0.9.6"
sha2 = "0.9.5"
tokio = { version = "1", features = ["macros"] }